--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "api-aluguel-de-carros",
   "version": "1.0.0",
-  "description": "API que simula casos de uso de uma locadora de automóveis.",
+  "description": "API REST para locadora de automóveis Veloz Car.",
   "main": "./src/server.js",
   "scripts": {
     "dev": "node --watch ./src/server.ts",
@@ -11,6 +11,7 @@
   "author": "Marcus Soares",
   "license": "ISC",
   "devDependencies": {
+    "@openapitools/openapi-generator-cli": "^2.20.2",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.21",
