--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "1.0.0",
   "description": "API REST para locadora de automóveis Veloz Car.",
   "main": "./src/server.js",
+  "prisma": {
+    "seed": "tsx ./prisma/seed.ts"
+  },
   "scripts": {
-    "dev": "node --watch ./src/server.ts",
+    "dev": "tsx watch ./src/server.ts",
     "build": "tsx",
     "start": "node ./build/server.js"
   },
   "author": "Marcus Soares",
   "license": "ISC",
   "devDependencies": {
-    "@openapitools/openapi-generator-cli": "^2.20.2",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.21",
@@ -24,7 +27,7 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "expres": "^0.0.5",
+    "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "uuid": "^11.1.0",
     "zod": "^3.25.20"
