--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev": "tsx watch ./src/server.ts",
     "build": "tsx",
-    "start": "node ./build/server.js"
+    "start": "node ./build/server.js",
+    "test": "jest"
   },
   "author": "Marcus Soares",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.15.21",
     "prisma": "^6.8.2",
     "tsx": "^4.19.4",
@@ -26,9 +28,12 @@
     "@prisma/client": "^6.8.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "decimal.js": "^10.5.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
+    "ts-jest": "^29.3.4",
     "uuid": "^11.1.0",
     "zod": "^3.25.20"
   }
