--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Marcus Soares",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^9.8.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
@@ -34,6 +35,7 @@
     "express": "^5.1.0",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
+    "stripe": "^18.2.1",
     "ts-jest": "^29.3.4",
     "uuid": "^11.1.0",
     "zod": "^3.25.20"
