--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "tsx watch ./src/server.ts",
-    "build": "tsx",
+    "build": "tsc",
     "start": "node ./build/server.js",
     "test": "jest"
   },
