--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "tsx watch ./src/server.ts",
     "build": "tsc",
-    "start": "node ./build/server.js",
+    "start": "node ./build/src/server.js",
     "test": "jest"
   },
   "author": "Marcus Soares",
