--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,9 @@
     "strict": true,
     "skipLibCheck": true,
     "outDir": "./build"
-  }
+  },
+    "exclude": [
+    "node_modules",
+    "**/*.test.ts"
+  ]
 }
