--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,12 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "outDir": "./build"
+    "outDir": "./build",
+    "rootDir": "./src"
   },
+    "include": [
+    "src/**/*.ts"
+    ],
     "exclude": [
     "node_modules",
     "**/*.test.ts"
